--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -8,47 +8,66 @@
 
 .footer-logo {
     display: flex;
-    align-items: center;
     gap: 30px;
+    align-items: center;
 
 }
 
 .footer-logo p {
-    font-size: 80px;
+    font-size: 100px;
     font-weight: 400;
     color: #333;
-}
+    font-weight: bold;
 
+}
+.footer-logo img{
+    height: 300px;
+    width: 300px;
+}
 
 .footer-links {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 200px;
     color: black;
-    font-size: 30px;
+    font-size: 60px;
 }
 
 .footer-links li {
    cursor: pointer;
+
 }
 
 .footer-social-icon{
-    gap:30px;
+    gap:180px;
     display:flex;
-    width:100;
+    width:100;   
+
 }
+
+.footer-icons-container img,
+.footer-social-container img {
+    width: 200px; 
+    height: 200px; 
+ 
+}
+
+
 .footer-icons-container{
     padding:10px;
     padding-bottom: 6px;
+
 }
 .footer-copyright {
+
     margin-bottom: 20px; 
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    align-items: column;
     gap: 30px;
-    width:100px;
-    font-size: 20px;
+    width:5000px;
+    font-size: 40px;
     color: black;
+    text-align: center;
 
 }
 
